Fixed label color on dark mode

--- a/sass/components/forms/_select.scss
+++ b/sass/components/forms/_select.scss
@@ -1,7 +1,10 @@
 /* Select Field
    ========================================================================== */
 
-select.browser-default { opacity: 1; }
+select.browser-default {
+  opacity: 1;
+}
+
 select {
   opacity: 0;
   background-color: $select-background;
@@ -17,39 +20,41 @@ select {
 }
 
 .select-wrapper {
+
   &.valid .helper-text[data-success],
-  &.invalid ~ .helper-text[data-error] {
+  &.invalid~.helper-text[data-error] {
     @extend %hidden-text;
   }
 
   &.valid {
-    & > input.select-dropdown {
+    &>input.select-dropdown {
       @extend %valid-input-style;
     }
 
-    & ~ .helper-text:after {
+    &~.helper-text:after {
       @extend %custom-success-message;
     }
   }
 
   &.invalid {
-    & > input.select-dropdown,
-    & > input.select-dropdown:focus {
+
+    &>input.select-dropdown,
+    &>input.select-dropdown:focus {
       @extend %invalid-input-style;
     }
 
-    & ~ .helper-text:after {
+    &~.helper-text:after {
       @extend %custom-error-message;
     }
   }
 
-  &.valid + label,
-  &.invalid + label {
+  &.valid+label,
+  &.invalid+label {
     width: 100%;
     pointer-events: none;
   }
 
-  & + label:after {
+  &+label:after {
     @extend %input-after-style;
   }
 
@@ -59,6 +64,7 @@ select {
     &:focus {
       border-bottom: 1px solid $input-focus-color;
     }
+
     position: relative;
     cursor: pointer;
     background-color: transparent;
@@ -83,10 +89,10 @@ select {
     bottom: 0;
     margin: auto 0;
     z-index: 0;
-    fill: rgba(0,0,0,.87);
+    fill: rgba(0, 0, 0, .87);
   }
 
-  & + label {
+  &+label {
     position: absolute;
     top: -26px;
     font-size: $label-font-size;
@@ -110,9 +116,10 @@ select:disabled {
 }
 
 .select-wrapper.disabled {
-  + label {
+  +label {
     color: $input-disabled-color;
   }
+
   .caret {
     fill: $input-disabled-color;
   }
@@ -129,7 +136,7 @@ select:disabled {
 }
 
 .select-dropdown li.disabled,
-.select-dropdown li.disabled > span,
+.select-dropdown li.disabled>span,
 .select-dropdown li.optgroup {
   color: $select-disabled-color;
   background-color: transparent;
@@ -150,26 +157,34 @@ body.keyboard-focused {
     &.selected {
       background-color: $select-option-selected;
     }
+
+    label {
+      color: $dropdown-color;
+    }
   }
 }
 
 // Prefix Icons
-.prefix ~ .select-wrapper {
+.prefix~.select-wrapper {
   margin-left: 3rem;
   width: 92%;
   width: calc(100% - 3rem);
 }
 
-.prefix ~ label { margin-left: 3rem; }
+.prefix~label {
+  margin-left: 3rem;
+}
 
 // Suffix Icons
-.suffix ~ .select-wrapper {
+.suffix~.select-wrapper {
   margin-right: 3rem;
   width: 92%;
   width: calc(100% - 3rem);
 }
 
-.suffix ~ label { margin-right: 3rem; }
+.suffix~label {
+  margin-right: 3rem;
+}
 
 // Icons
 .select-dropdown li {
@@ -185,15 +200,15 @@ body.keyboard-focused {
 .select-dropdown li.optgroup {
   border-top: 1px solid $dropdown-hover-bg-color;
 
-  &.selected > span {
+  &.selected>span {
     color: rgba(0, 0, 0, .7);
   }
 
-  & > span {
+  &>span {
     color: rgba(0, 0, 0, .4);
   }
 
-  & ~ li.optgroup-option {
+  &~li.optgroup-option {
     padding-left: 1rem;
   }
 }
